  arguments as well as directories.
* Fix crasher in quiet singleton imports (import -qs).
* Fix crash when autotagging files with no metadata.
* Fix a rare deadlock when finishing the import pipeline.
* Fix an issue that was causing mpdupdate to run twice for every album.
* Fix a bug that caused release dates/years not to be fetched.
* Fix a crasher when setting MBIDs on MP3s file metadata.
* A better error message is given when the database file is unopenable.

1.0b8
-----
* Better support for singleton (non-album) tracks. Whereas beets
  previously only really supported full albums, now it can also keep
  track of individual, off-album songs. The "singleton" path format
  can be used to customize where these tracks are stored. To import
  singleton tracks, provide the -s switch to the import command or,
  while doing a normal full-album import, choose the "as Tracks" (T)
  option to add singletons to your library. To list only singleton or
  only album tracks, use the new "singleton:" query term: the query
  "singleton:true" matches only singleton tracks; "singleton:false"
  matches only album tracks. The lastid plugin has been extended to
  support matching individual items as well.
* The importer/autotagger system has been heavily refactored in this
  release. If anything breaks as a result, please let me know.
* Support for album art embedded in files. A new plugin, called
  "embedart", implements this functionality. Enable the plugin to
  automatically embed downloaded album art into your music files'
  metadata. The plugin also provides the "embedart" and "extractart"
  commands for moving image files in and out of metadata. See the
  wiki for more details. (Thanks, daenney!)
* The "distance" number, which quantifies how different an album's
  current and proposed metadata are, is now displayed as "similarity"
  instead. This should be less noisy and confusing; you'll now see
  99.5% instead of 0.00489323.